--- a/app/src/main/res/layout/fragment_cipher_dec.xml
+++ b/app/src/main/res/layout/fragment_cipher_dec.xml
@@ -49,7 +49,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp" />
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        app:expandedHintEnabled="false">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/initVectorForDecEdt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:hint="Initialization Vector sizes: 128 bits"
+            android:imeOptions="actionSend"
+            android:inputType="text"
+            android:maxLines="1" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/sizeIVForDecTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
