--- a/app/src/main/res/layout/fragment_aes_cipher_enc.xml
+++ b/app/src/main/res/layout/fragment_aes_cipher_enc.xml
@@ -5,18 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CipherDecFragment">
+    android:layout_margin="12dp"
+    tools:context=".fragments.advanced_encryption_standard.AESCipherEncFragment">
+
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="12dp"
         android:layout_weight="0.5"
         app:expandedHintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ciphertextForDecEdt"
+            android:id="@+id/plaintextForEncEdt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="start"
@@ -30,11 +31,10 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
         app:expandedHintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/keyForDecEdt"
+            android:id="@+id/keyForEncEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
@@ -45,19 +45,19 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/sizeKeyForDecTv"
+        android:id="@+id/sizeKeyForEncTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp" />
+       />
+
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
         app:expandedHintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/initVectorForDecEdt"
+            android:id="@+id/initVectorEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
@@ -67,56 +67,73 @@
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
+
     <TextView
-        android:id="@+id/sizeIVForDecTv"
+        android:id="@+id/sizeIVForEncTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp" />
+      />
+    <!--    <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:expandedHintEnabled="false">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/vector_init_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:gravity="start"
+                android:hint="Initialization vector"
+                android:imeOptions="actionSend"
+                android:inputType="text"
+                android:maxLines="1" />
+        </com.google.android.material.textfield.TextInputLayout>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/clearForDecBt"
+            android:id="@+id/clearForEncBt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="12dp"
             android:layout_weight="0.5"
             android:drawableLeft="@drawable/ic_baseline_clear_24"
             android:gravity="center"
+            android:backgroundTint="@color/black"
             android:text="@string/clear" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/decryptBtn"
+        android:id="@+id/encrypt_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:text="@string/decrypt" />
+        android:text="@string/encrypt"
+        android:backgroundTint="@color/black"
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        />
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="12dp"
         android:layout_weight="0.5"
-
         app:expandedHintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/plaintextForDecEdt"
+            android:id="@+id/cipherTextForEncEdt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="start"
-
             android:hint="@string/enter_your_text"
             android:imeOptions="actionSend"
             android:inputType="text"
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
 
 </LinearLayout>
