--- a/app/src/main/res/layout/fragment_select_dec_cipher.xml
+++ b/app/src/main/res/layout/fragment_select_dec_cipher.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,6 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="AES"
+        android:backgroundTint="@color/black"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/encDesCipherBt"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,10 +29,24 @@
         android:id="@+id/encDesCipherBt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DES"
+        android:text="ASCI"
+        android:backgroundTint="@color/black"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/encAesCipherBt"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/decCaesarCipherBt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Caesar cipher"
+        android:backgroundTint="@color/black"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/encAesCipherBt"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+</LinearLayout>
