Added hash function.

--- a/app/src/main/res/layout/fragment_a_s_c_i_i_code_dec.xml
+++ b/app/src/main/res/layout/fragment_a_s_c_i_i_code_dec.xml
@@ -16,7 +16,7 @@
         app:expandedHintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ciphertextForEncEdt"
+            android:id="@+id/ciphertextForDecEdt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="start"
